assets/css/main.scss
---
# Only the main Sass file needs front matter (the dashes are enough)
---

@charset "utf-8";

@import "minimal-mistakes/skins/{{ site.minimal_mistakes_skin | default: 'default' }}"; // skin
@import "minimal-mistakes"; // main partials

$indigo-color: #292961;
$light-blue-color: #ebf1f4; /* brighter blue #eefcfb */
$deep-green-color: #03775E;
$orange-color: #AA3704;

$dark-red-color: #77031C;
$dark-blue-color: #035677;
$purple-color: #7D4E57;
$salmon-color: #D66853;

html {
	font-size: 16px;
	color: #000;
}

#main {
    background-color: #fff;
}

html h1, h2, h3, h4, h5, h6 {
	color: #333;
}

h2 {
    font-size: 2em;
    margin: 0;
}

ol, ul {
    list-style: none;
}

ul li, 
ol li { 
    margin-bottom: 0; 
}

li ul, 
li ol { 
    margin-top: 0; 
}

form {
    background-color: #FFF;
    padding: 0;
}

h1 a {
	text-decoration: none;
}
.greedy-nav a.site-logo {
    margin-right: 0;
}

.site-logo img {
    margin-right: 0;
}

.site-title .location {
    font-size: 0.9em;
    letter-spacing: 8px;
    line-height: 1em;
    margin-left: 2px;
    text-transform: uppercase;
}

.site-title .title {
    font-family: 'Laila', sans-serif;
    font-size: 1.3em;
    line-height: 1.1em;
}

.greedy-nav a {
    color: #000;
}

.greedy-nav .visible-links a {
    color: $indigo-color;
    font-weight: 600;
    text-transform: uppercase;
}

.greedy-nav .visible-links a:before {
    background-color: $orange-color;
}

.row .content {
    margin: 0 auto;
    max-width: 80%;
    padding: 60px 0;
}

html .masthead #site-title {
	font-weight: 400;
}

.page {
    float: none; /* remove sidebar */
    margin: 0 auto;
}

.layout--splash .wrapper {
    background-image: url("./../images/humboldt_county_map.png");
    background-position: top 0 left 10%; /* TODO test on larger screens */
    background-repeat: no-repeat;
    min-height: 322px;
    text-align: center;
}

.layout--splash h1#page-title {
    text-shadow: none;
    color: #333;
    line-height: 1.2;
	margin: 15px 0;
    font-size: 3.5em;
	font-weight: 700;
	text-align: center;
	font-size: 3.5em;
}

.layout--splash .page__hero--overlay {
    border-bottom: 10px solid #666;
}

.page__hero--overlay .page__lead {
    color: #333;
    display: inline;
    font-size: 1.03125em; /* TODO use h5? */
    font-weight: 700;
    text-align: center;
    text-shadow: none;
    width: 100%; /* width and display center it vertically without letting button next to it */
}

html h6 {
	font-weight: 500;
	text-transform: uppercase; 
}

html body {
	color: #444;
}

html body .site-title {
	font-weight: 500;
}

html .masthead {
	background-color:#FFF;
    box-shadow: 0 2px 10px 0 rgba(0,0,0,0.1);
}

html .masthead .site-title-wrapper {
	min-width: 250px;
}

html .masthead .visible-links {
	overflow: visible;
}

.intro {
    text-align: center;
}

.intro h1 {
    font-size: 56px;
}

.intro h5 {
    margin: 30px 0;
}

a.btn--large,
input[type="submit"] {
    background-color: #168743;
    background-color: #04AA6D;
    border-radius: 5px; 
    color: white;
    font-size: 16px;
    font-weight: bold;
    display: inline-block;
    padding: 16px 80px;
    text-decoration: none;
}

input.createList {
    float: right;
}


.animate {
 background-image: linear-gradient(
    -225deg,
    $indigo-color 0%,
    $deep-green-color 29%,
    $orange-color 67%,
    #292961 100%
  );
  background-size: auto auto;
  background-clip: border-box;
  background-size: 200% auto;
  color: #fff;
  background-clip: text;
  text-fill-color: transparent;
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
  animation: textclip 2s linear infinite;
}

@keyframes textclip {
  to {
    background-position: 200% center;
  }
}


#flip {
  height:70px;
  overflow:hidden;
}

#flip > div > div {
  padding:4px 12px;
  height:70px;
  margin-bottom:70px;
  display:inline-block;
}

#flip div:first-child {
  animation: show 7s linear infinite;
}

#flip div div {
  color: $orange-color;
}
#flip div:first-child div {
  color: $indigo-color;
}
#flip div:last-child div {
  color: $deep-green-color;
}

@keyframes show {
  0% {margin-top:-420px;}
  5% {margin-top:-280px;}
  33% {margin-top:-280px;}
  38% {margin-top:-140px;}
  66% {margin-top:-140px;}
  71% {margin-top:0px;}
  99.99% {margin-top:0px;}
  100% {margin-top:-420px;}
}

hr {
    background: $indigo-color;
    height: 10px;
    margin: 0;
}

h5 {
    color: #000;
}

ul.topics {
    display: -webkit-box;
    display: -webkit-flex;
    display: -moz-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-wrap: wrap;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
    padding-top: 40px;
}

li.topic {
    margin-right: 24px;
    min-width: 290px;
    padding-bottom: 48px;
    width: calc(50% - 24px);
}

figure.left {
    float: left;
    margin-bottom: 0;
    margin-right: 15px;
}

figure.right {
    float: right;
    margin-bottom: 0;
    margin-left: 15px;
}

table.plant_table {
    font-size: 1em;
}

html table  thead {
    background-color: #FFF;
    border-radius-top-right: 8px;
    border-radius-top-left: 8px;
    border: 1px solid #dadce0;
    font-size: 1em;
}

input[type="search"] {
    background-image: url("./../images/icons/search-icon.png");
    background-repeat: no-repeat;
    background-position: 10px 8px !important;
    border: 1px solid #dadce0;
    border-radius: 20px;
    box-shadow: none;
    padding: 10px 10px 10px 50px;
}

input[type="search"]::placeholder {
    color: #777;
}

select {
    border: 1px solid #dadce0;
    border-radius: 20px;
    box-shadow: none;
    min-width: 120px;
    /* 
    -webkit-appearance: none;
    -moz-appearance: none; */}
table.dataTable thead .sorting {
    padding-right: 30px !important;
}

html table .scientific_name,
html table div.height { 
	color: #888;
	font-size: 0.9em;
    font-weight: normal;
}

html table .scientific_name {
	font-style: italic;
}

.plant_table td {
    padding: 5px 16px !important;
}

.plant_table td.name img {
    border-radius: 20px;
    float: left;
    height: 40px;
    margin: 5px 16px 5px 0;
    width: 40px;
}

.plant_table td.name .empty_icon {
    float: left;
    margin-right: 16px;
    width: 40px;
}

.plant_table td.name {
    min-width: 275px
}

.plant_table td.native_to {
    text-align: center;
}

.plant_filters .filters {
    display: flex;
}

.plant_filters .filter_input {
    margin: 10px 20px 10px 0;
}

input[type=checkbox]
{
  /* Double-sized Checkboxes */
  -ms-transform: scale(1.2); /* IE */
  -moz-transform: scale(1.2); /* FF */
  -webkit-transform: scale(1.2); /* Safari and Chrome */
  -o-transform: scale(1.2); /* Opera */
  transform: scale(1.2);
  margin: 10px;
}

#new_search_location {
    min-width: 100px;
    max-width: 340px;
    float: left;
    margin-right: 30px; 
}

td.plant_type {
    min-width: 40px;
}

td.plant_type .type_icon {
    background-repeat: no-repeat;
    margin: 0 auto; 
    height: 30px;
    width: 30px;
} 

div.annual_herb {
    background-color: $salmon-color;
    background-image: url("./../images/icons/annual_herb.png");
}

div.grass {
    background-color: $deep-green-color;
    background-image: url("./../images/icons/grass.png");
}

div.tree {
    background-color: $dark-red-color;
    background-image: url("./../images/icons/tree.png");
}

div.fern {
    background-color: $dark-blue-color;
    background-image: url("./../images/icons/fern.png");
}


div.perennial_herb {
    background-color: $indigo-color;
    background-image: url("./../images/icons/perennial_herb.png");
}

div.shrub {
    background-color: $purple-color;
    background-image: url("./../images/icons/shrub.png");
}

div.vine {
    background-color: $orange-color;
    background-image: url("./../images/icons/vine.png");
}

.volunteer .archive__item-teaser {
    float: right;
    max-width: 150px;
    padding: 30px 20px;
}

.volunteer_opportunity {
	background-color: white;
	padding: 20px 30px 20px;
	margin-bottom: 10px;
}

.volunteer_opportunity img {
	float: left;
	margin-right: 20px;
}

.sun_req div {
    border-radius: 15px;
    height: 30px;
    margin: 0 auto;
    width: 30px;
}

.sun_req .a {
  background-color: #FFD700;
}

.sun_req .ab {
    background: repeating-linear-gradient(
      to right,
      #FFD700,
      #FFD700 15px,
      #CCC 15px,
      #CCC 30px
    );
}

.sun_req .bc {
    background: repeating-linear-gradient(
      to right,
      #CCC,
      #CCC 15px,
      #888 15px,
      #888 30px
    );
}

.sun_req .abc {
    background-image: url("./../images/icons/sun_all.png");
    background-repeat: no-repeat; 
    height: 30px;
    width: 30px;
}

.sun_req .b {
  background-color: #CCC;
}

.sun_req .c {
  background-color: #888;
}

#learn_more figure {
    width: 200px;
}

#learn_more img.redwood {
    height: 267px;
    width: 200px;
}

#learn_more img.butterfly {
    height: 127px;
    width: 190px;
}


#learn_more figure.ceanothus,
#learn_more figure.yarrow {
    width: 300px;
}

#learn_more img.ceanothus,
#learn_more img.yarrow {
    height: 200px;
    width: 300px;
}

#learn_more figure.lupine {
    width: 133px;
}

#learn_more img.lupine {
    height: 200px;
    width: 133px;
}

.plant.card {
    border: 1px solid #dadce0;
    border-radius: 10px;
    margin-bottom: 16px;
    min-height: 132px;
    padding: 16px;
}

.plant.card img {
    float: left;
    margin-right: 20px;
    height: 100px;
    border-radius: 50px;
    width: 100px;
}

.plant.card h3 {
    margin: 0 0 8px 0; 
}

.plant.card .subtext {
    margin-bottom: 16px;
}

.layout--single .page__title {
    margin: 42px 0 32px;
    text-align: center;
}

.layout--single .initial-content {
    background-color: $light-blue-color;
}

.layout--single h2 {
    font-size: 1.125em;
    font-weight: 600;
}

.layout--single .feature__item {
    background-color: #FFF;
    border-radius: 7px;
    margin-bottom: 40px;
}

.layout--single .feature__item .archive__item-teaser {
    border-radius: none;
}
.layout--single .feature__item .archive__item-body {
    padding: 10px 20px;
}

.layout--single .feature__item address {
    margin-bottom: 20px;
}

.card .subtext {
    font-size: 0.7em;
}

.plant-page div.icon_holder {
    float: left;
    margin-right: 32px;
    margin-bottom: 32px;
    width: 200px;
}

.plant-page .attr {
    font-size: 0.8em;
    text-align: center;
}

.plant-page img {
    border-radius: 100px;
    margin-bottom: 3px;
}

.layout--category header h1 {
    display: none;
}

#footer {
    color: #FFF;
    background-color: $indigo-color;
}

